--- a/mathcalc.html
+++ b/mathcalc.html
@@ -1,174 +1,357 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ro">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Minimal Portfolio</title>
+    <title>Calcul Cel Mai Mare Divizor Comun și Cel Mai Mic Multiplu Comun</title>
+    <!-- Include Font Awesome pentru iconițe -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+
     <style>
         body {
+            font-family: 'Arial', sans-serif;
             margin: 0;
-            font-family: Arial, sans-serif;
-            background: #000;
-            color: #fff;
-            overflow-x: hidden;
-            scroll-behavior: smooth;
-        }
-
-        /* General Section Styling */
-        .section {
-            height: 100vh;
+            padding: 0;
+            background-color: #f3f4f6;
             display: flex;
-            flex-direction: column;
             justify-content: center;
             align-items: center;
+            height: 100vh;
+            flex-direction: column;
+        }
+
+        h1 {
             text-align: center;
+            background-color: #2196F3;
+            color: white;
             padding: 20px;
+            margin: 0;
+            width: 100%;
+            font-size: 1.8em;
         }
 
-        /* Minimalistic Welcome Text */
-        .welcome {
-            font-size: 4rem;
-            letter-spacing: 2px;
-            color: #fff;
-            text-shadow: 0 0 10px #0ff, 0 0 20px #0ff;
-            animation: fadeIn 3s ease-in-out;
+        .container {
+            width: 100%;
+            max-width: 800px;
+            padding: 20px;
+            background-color: white;
+            border-radius: 10px;
+            box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+            text-align: center;
         }
 
-        /* Placeholder Subtitle */
-        .subtitle {
+        .input-group {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            width: 100%;
+        }
+
+        label {
+            font-size: 1.2em;
+            margin: 10px 0;
+            color: #2196F3;
+        }
+
+        input {
+            padding: 10px;
+            font-size: 1.2em;
+            margin: 10px 0;
+            border-radius: 8px;
+            border: 2px solid #2196F3;
+            width: 100%;
+            max-width: 400px;
+        }
+
+        button {
+            padding: 15px 25px;
+            font-size: 1.2em;
+            margin-top: 10px;
+            background-color: #2196F3;
+            color: white;
+            border: none;
+            border-radius: 8px;
+            cursor: pointer;
+            width: 100%;
+            max-width: 400px;
+            transition: background-color 0.3s, transform 0.3s;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+
+        button:hover {
+            background-color: #1976D2;
+            transform: scale(1.05);
+        }
+
+        /* Iconițele înaintea textului */
+        button i {
+            margin-right: 10px;
+        }
+
+        .result {
             margin-top: 20px;
-            font-size: 1.2rem;
-            color: #aaa;
+            font-size: 1.5em;
+            font-weight: bold;
+            color: #2196F3;
+            text-align: center;
+            opacity: 0;
+            animation: fadeIn 1s forwards;
         }
 
-        /* Text Animations */
         @keyframes fadeIn {
-            0% {
+            from { opacity: 0; }
+            to { opacity: 1; }
+        }
+
+        /* Animația pentru pașii de descompunere */
+        .step {
+            margin-left: 20px;
+            opacity: 0;
+            transform: translateY(20px);
+            animation: fadeInSlide 0.5s forwards;
+        }
+
+        /* Adăugăm o întârziere pentru fiecare linie */
+        .step:nth-child(1) {
+            animation-delay: 0.2s;
+        }
+        .step:nth-child(2) {
+            animation-delay: 0.4s;
+        }
+        .step:nth-child(3) {
+            animation-delay: 0.6s;
+        }
+        .step:nth-child(4) {
+            animation-delay: 0.8s;
+        }
+
+        /* Keyframes pentru animația de slide */
+        @keyframes fadeInSlide {
+            from {
                 opacity: 0;
                 transform: translateY(20px);
             }
-            100% {
+            to {
                 opacity: 1;
                 transform: translateY(0);
             }
         }
 
-        /* Interactive Button */
-        .cta {
-            margin-top: 30px;
-            padding: 15px 30px;
-            font-size: 1rem;
-            color: #000;
-            background: #0ff;
-            border: none;
-            border-radius: 30px;
-            cursor: pointer;
-            transition: all 0.3s ease;
+        .final-factors {
+            margin-top: 20px;
+            font-size: 1.5em;
+            font-weight: bold;
+            text-align: center;
+            color: #2196F3;
         }
 
-        .cta:hover {
-            background: #fff;
-            color: #000;
-            box-shadow: 0 0 15px #0ff, 0 0 30px #0ff;
+        .author {
+            text-align: center;
+            margin-top: 20px;
+            font-size: 1.2em;
+            color: #2196F3;
         }
 
-        /* Section Break */
-        .section-break {
-            height: 50px;
-            background: linear-gradient(to bottom, #000, #333, #000);
-        }
-
-        /* About Section Styling */
-        .about-text {
-            font-size: 1.5rem;
-            line-height: 1.8;
-            color: #ccc;
-        }
-
-        .about-highlight {
-            color: #0ff;
-            text-shadow: 0 0 10px #0ff;
-        }
-
-        /* Parallax Image Section */
-        .parallax {
-            background: url('https://via.placeholder.com/1920x1080') no-repeat center center / cover;
-            height: 100vh;
-            position: relative;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-
-        .parallax-text {
-            font-size: 3rem;
-            color: #fff;
-            text-shadow: 0 0 15px #0ff, 0 0 30px #0ff;
-            background: rgba(0, 0, 0, 0.5);
-            padding: 20px 40px;
-            border-radius: 10px;
-        }
-
-        /* Footer Styling */
-        footer {
-            height: 50px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            background: #111;
-            color: #aaa;
-            font-size: 0.9rem;
-        }
-
-        footer a {
-            color: #0ff;
-            text-decoration: none;
-            margin-left: 5px;
-            transition: color 0.3s;
-        }
-
-        footer a:hover {
-            color: #fff;
+        @media (max-width: 600px) {
+            h1 {
+                font-size: 1.5em;
+                padding: 15px;
+            }
+            .input-group {
+                width: 90%;
+            }
+            input, button {
+                font-size: 1em;
+                padding: 12px;
+            }
+            .final-factors {
+                font-size: 1.2em;
+            }
         }
     </style>
 </head>
 <body>
-    <!-- Hero Section -->
-    <div class="section" id="home">
-        <h1 class="welcome">Welcome to My Portfolio</h1>
-        <p class="subtitle">Placeholder text for an unforgettable tagline.</p>
-        <button class="cta" onclick="scrollToSection('about')">Learn More</button>
+    <h1>Realizat de Dumitrascu Alexandru</h1>
+    <div class="container">
+        <div class="input-group">
+            <label for="allNumbers">Introdu numere (separate prin virgulă sau spațiu):</label>
+            <input type="text" id="allNumbers" placeholder="Ex: 24, 18, 20" />
+            <button onclick="calculateGCD()">
+                <i class="fas fa-cogs"></i> Calculare Cel mai mare divizor comun
+            </button>
+            <button onclick="calculateLCM()">
+                <i class="fas fa-cogs"></i> Calculare Cel mai mic multiplu comun
+            </button>
+        </div>
+
+        <div class="steps-container" id="stepsContainer"></div>
+        <div class="final-factors" id="gcd"></div>
+        <div class="final-factors" id="lcm"></div>
     </div>
-
-    <!-- Section Break -->
-    <div class="section-break"></div>
-
-    <!-- About Section -->
-    <div class="section" id="about">
-        <p class="about-text">
-            This is a <span class="about-highlight">placeholder</span> description of who you are and what you do.
-            Replace this text with something compelling, concise, and memorable.
-        </p>
-    </div>
-
-    <!-- Section Break -->
-    <div class="section-break"></div>
-
-    <!-- Parallax Section -->
-    <div class="parallax">
-        <div class="parallax-text">An Image That Speaks Volumes</div>
-    </div>
-
-    <!-- Footer -->
-    <footer>
-        <span>© 2024 Your Name | Find me on</span>
-        <a href="#home">LinkedIn</a> | <a href="#home">GitHub</a>
-    </footer>
 
     <script>
-        function scrollToSection(id) {
-            const section = document.getElementById(id);
-            section.scrollIntoView({ behavior: 'smooth' });
+        // Functie pentru calculul Cel Mai Mare Divizor Comun între 2 numere
+        function gcd(a, b) {
+            while (b !== 0) {
+                let temp = b;
+                b = a % b;
+                a = temp;
+            }
+            return a;
+        }
+
+        // Functie pentru descompunerea unui numar in factori primi
+        function primeFactors(num) {
+            let factors = [];
+            for (let i = 2; i <= num; i++) {
+                while (num % i === 0) {
+                    factors.push(i);
+                    num /= i;
+                }
+            }
+            return factors;
+        }
+
+        // Functie pentru calculul Cel Mai Mare Divizor Comun între mai multe numere
+        function calculateGCD() {
+            let allNumbers = document.getElementById("allNumbers").value;
+            allNumbers = allNumbers.includes(",") ? allNumbers.split(",") : allNumbers.split(" ");
+            let error = false;
+
+            // Verificare validitate numere
+            for (let index = 0; index < allNumbers.length; index++) {
+                const element = allNumbers[index].trim();
+                if (isNaN(element) || !Number.isInteger(Number(element)) || element === "") {
+                    error = true;
+                    break;
+                }
+            }
+
+            // Daca nu sunt erori
+            if (!error && allNumbers.length > 1) {
+                let numbers = allNumbers.map(num => parseInt(num.trim()));
+
+                // Afișează pașii pentru descompunerea fiecărui număr
+                let stepsHTML = '';
+                let primeFactorLists = [];
+                numbers.forEach(num => {
+                    let factors = primeFactors(num);
+                    let stepHTML = `Numărul ${num} este descompus astfel:\n`;
+
+                    // Pașii de descompunere
+                    let currentNum = num;
+                    factors.forEach(factor => {
+                        stepHTML += `
+                            <div class="step">${currentNum} | ${factor}</div>
+                        `;
+                        currentNum /= factor;
+                    });
+                    stepHTML += `
+                        <div class="step">1 | 0</div>
+                    `;
+                    stepsHTML += stepHTML + '<br><br>';
+
+                    // Salvează factori pentru fiecare număr
+                    primeFactorLists.push(factors);
+                });
+
+                // Afișează pașii de descompunere
+                document.getElementById("stepsContainer").innerHTML = stepsHTML;
+
+                // Calcul Cel Mai Mare Divizor Comun între mai multe numere
+                let gcdFinal = numbers[0];
+                numbers.slice(1).forEach(num => {
+                    gcdFinal = gcd(gcdFinal, num);
+                });
+
+                // Afișează rezultatul final pentru GCD
+                document.getElementById("gcd").innerHTML = `Cel mai mare divizor comun = ${gcdFinal}`;
+            } else {
+                // Erori în caz de input invalid
+                document.getElementById("gcd").innerHTML = "Te rog introdu numere valide, separate prin virgulă sau spațiu.";
+                document.getElementById("stepsContainer").innerHTML = "";
+            }
+        }
+
+        // Functie pentru calculul Cel Mai Mic Multiplu Comun între mai multe numere
+        function calculateLCM() {
+            let allNumbers = document.getElementById("allNumbers").value;
+            allNumbers = allNumbers.includes(",") ? allNumbers.split(",") : allNumbers.split(" ");
+            let error = false;
+
+            // Verificare validitate numere
+            for (let index = 0; index < allNumbers.length; index++) {
+                const element = allNumbers[index].trim();
+                if (isNaN(element) || !Number.isInteger(Number(element)) || element === "") {
+                    error = true;
+                    break;
+                }
+            }
+
+            // Daca nu sunt erori
+            if (!error && allNumbers.length > 1) {
+                let numbers = allNumbers.map(num => parseInt(num.trim()));
+
+                // Afișează pașii pentru descompunerea fiecărui număr
+                let stepsHTML = '';
+                let primeFactorLists = [];
+                numbers.forEach(num => {
+                    let factors = primeFactors(num);
+                    let stepHTML = `Numărul ${num} este descompus astfel:\n`;
+
+                    // Pașii de descompunere
+                    let currentNum = num;
+                    factors.forEach(factor => {
+                        stepHTML += `
+                            <div class="step">${currentNum} | ${factor}</div>
+                        `;
+                        currentNum /= factor;
+                    });
+                    stepHTML += `
+                        <div class="step">1 | 0</div>
+                    `;
+                    stepsHTML += stepHTML + '<br><br>';
+
+                    // Salvează factori pentru fiecare număr
+                    primeFactorLists.push(factors);
+                });
+
+                // Afișează pașii de descompunere
+                document.getElementById("stepsContainer").innerHTML = stepsHTML;
+
+                // Calcul Cel Mai Mic Multiplu Comun între mai multe numere
+                let lcmFactors = {};
+                let lcmFinal = 1;
+
+                // Determinăm factorii și luăm puterea maximă pentru fiecare factor
+                primeFactorLists.forEach(factors => {
+                    factors.forEach(factor => {
+                        let count = factors.filter(f => f === factor).length;
+                        if (!lcmFactors[factor] || count > lcmFactors[factor]) {
+                            lcmFactors[factor] = count;
+                        }
+                    });
+                });
+
+                // Generăm formula finală pentru Cel Mai Mic Multiplu Comun
+                let lcmString = '';
+                for (let factor in lcmFactors) {
+                    lcmString += `${factor}¹•`;
+                    lcmFinal *= Math.pow(factor, lcmFactors[factor]);
+                }
+
+                // Elimină ultima „•” din string
+                lcmString = lcmString.slice(0, -1);
+
+                // Afișează formula și rezultatul final
+                document.getElementById("lcm").innerHTML = `Cel mai mic multiplu comun = ${lcmFinal} (${lcmString})`;
+            } else {
+                // Erori în caz de input invalid
+                document.getElementById("lcm").innerHTML = "Te rog introdu numere valide, separate prin virgulă sau spațiu.";
+                document.getElementById("stepsContainer").innerHTML = "";
+            }
         }
     </script>
 </body>
